--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@
     }
 }
 
-@media screen and (min-width: 464px){
+@media screen and (max-width: 464px){
     #random .motivation{
         font-size: 15px;
         max-width: 350px;
